# isc-nrf54l15-test-jig

./: CMakeLists.txt  Kconfig  isc_nrf54l15.overlay  prj.conf
app/: com.c  com.h  mac.c  mac.h  process.c  process.h  test_commands.c  test_commands.h
boards/ISC/ISC_NRF54L15/: ISC_NRF54L15-pinctrl.dtsi  ISC_NRF54L15_nrf54l15_cpuapp.dts  ISC_NRF54L15_nrf54l15_cpuapp.yaml  ISC_NRF54L15_nrf54l15_cpuapp_defconfig  Kconfig.ISC_NRF54L15  Kconfig.defconfig  board.yml
common/: common-pinctrl.dtsi  common.conf  nrfx_example.h
src/: main.c
test_samples/ble/: ble.c
test_samples/gpio/: gpio.c
